--- a/MedLocate/app/src/main/AndroidManifest.xml
+++ b/MedLocate/app/src/main/AndroidManifest.xml
@@ -15,8 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MedLocate">
-        <activity android:name=".SignupActivity"></activity>
-        <activity android:name=".LoginActivity" >
+        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".SignupActivity" />
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,9 +38,7 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps">
-
-        </activity>
+            android:label="@string/title_activity_maps"></activity>
     </application>
 
 </manifest>
